ADDING FIN MODULE

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -33,6 +33,24 @@
 
         </div>
 
+
+        <div class="col-sm-2">
+            <h5 class="text-primary font-weight-bold">FINAL CATEGORY</h5>
+            <mat-card >
+                <a class="anchorUnderline" routerLink="createFinalCategory">
+                    <h5>Create Final Category</h5>
+                </a>
+                <a class="anchorUnderline" routerLink="showFinalCategory">
+                    <h5>show Final category</h5>
+                </a>
+                <a class="anchorUnderline" routerLink="uploadFilesFinalCategory">
+                    <h5>upload Images</h5>
+                </a>
+            </mat-card>
+
+        </div>
+
+
         <div class="col-sm-2">
             <h5  class="text-primary font-weight-bold"  >ADD PRODUCT</h5>
             <mat-card >
