--- a/src/styles.css
+++ b/src/styles.css
@@ -21,3 +21,65 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 {
     text-decoration: underline;
 }
+
+.fontSize1
+{
+    font-size: 1px;
+}
+
+.fontSize2
+{
+    font-size: 2px;
+}
+.fontSize3
+{
+    font-size: 3px;
+}
+.fontSize4
+{
+    font-size: 4px;
+}
+.fontSize5
+{
+    font-size: 5px;
+}
+.fontSize6
+{
+    font-size: 6px;
+}
+.fontSize7
+{
+    font-size: 7px;
+}
+.fontSize8
+{
+    font-size: 8px;
+}
+.fontSize9
+{
+    font-size: 9px;
+}
+.fontSize10
+{
+    font-size: 10px;
+}
+.fontSize11
+{
+    font-size: 11px;
+}
+.fontSize12
+{
+    font-size: 12px;
+}
+.fontSize13
+{
+    font-size: 13px;
+}
+.fontSize14
+{
+    font-size: 14px;
+}
+.fontSize15
+{
+    font-size: 15px;
+}
