--- a/src/app/pages/finalCategoryComponent/final-category/final-category.component.html
+++ b/src/app/pages/finalCategoryComponent/final-category/final-category.component.html
@@ -4,26 +4,24 @@
   
   
   <div class="container rootCategoryWidth mt-4">
-
     
-    
-      <h4 class="font-weight-bolder text-primary">UPDATE SUB CATGORY</h4>
+      <h4 class="font-weight-bolder text-primary">FINAL CATGORY</h4>
      
       <mat-card>
   
-          <form (ngSubmit)="updateSubCategory()">
+          <form (ngSubmit)="createFinalCategory()">
   
               <div class="form-row">
                 <div class="form-group col-md-6">
-                  <label for="inputEmail4">categoryName</label>
+                  <label for="inputEmail4">FinalcategoryName</label>
                   <input type="text" 
-                  [(ngModel)]="updateSubCategoryData.subCategoryName" name="subCategoryName"
+                  [(ngModel)]="finalCategoryForm.finalCategoryName" name="rootCategoryName"
                    class="form-control"  placeholder="category Name">
                 </div>
                 <div class="form-group col-md-6">
                   <label for="inputPassword4">description</label>
                   <input  type="text"
-                  [(ngModel)]="updateSubCategoryData.description" name="description" 
+                  [(ngModel)]="finalCategoryForm.description" name="description" 
                    class="form-control" placeholder="description">
                 </div>
               </div>
@@ -32,36 +30,26 @@
               <div class="form-group">
                   <label for="inputAddress">short Description</label>
                   <textarea type="text" 
-                  [(ngModel)]="updateSubCategoryData.shortDescription" name="shortDescription" 
+                  [(ngModel)]="finalCategoryForm.shortDescription" name="shortDescription" 
                   class="form-control"  placeholder="short Description"></textarea>
                 </div>
   
               <div class="form-group">
                 <label for="inputAddress">long Description</label>
                 <textarea type="text" 
-                [(ngModel)]="updateSubCategoryData.longDescription" name="longDescription" 
+                [(ngModel)]="finalCategoryForm.longDescription" name="longDescription" 
                 class="form-control"  placeholder="long Description"></textarea>
               </div>
 
-              <div class="form-group">
-                <mat-slide-toggle name="subCategoryStatus" [(ngModel)]="updateSubCategoryData.subCategoryStatus">
-                </mat-slide-toggle>
-              </div>
-             
-
-              <select name="rootCategoryId"  [(ngModel)]="selectedRootCategoryId" class="form-control form-control-sm mb-3 mt-1">
-                <option *ngFor="let rootData of rootCategoryData" [ngValue]="rootData.productRootCategoryId" selected>
-
-                    <div *ngIf="rootData.rootCategoryName === updateSubCategoryData.productRootCategoryForm.rootCategoryName">
-                      <option selected>[SELECTED] </option>
-                    </div>
-
-                    <div>
-                      {{rootData.rootCategoryName}}
-                    </div>
-
+              <select name="subCategoryId"  [(ngModel)]="selectedSubCategoryId" class="custom-select" id="inlineFormCustomSelectPref">
+                <option selected disabled>Choose...</option>
+                <option *ngFor="let item of subCategoryList"
+                        [ngValue]="item.productSubCategoryId">
+                        {{item.productSubCategoryId}} = {{item.subCategoryName}} 
+                        [ {{item.productRootCategoryForm.rootCategoryName}} ]
                 </option>
               </select>
+
 
 
               <div class="form-group">
@@ -75,7 +63,7 @@
               </div>
   
              <div>
-              <button  mat-raised-button  color="primary">UPDATE SUB CATEGORY</button>
+              <button  mat-raised-button  color="primary">SAVE SUB CATEGORY</button>
              </div>
             </form>
   
