--- a/src/app/pages/productComponent/add-product/add-product.component.html
+++ b/src/app/pages/productComponent/add-product/add-product.component.html
@@ -258,8 +258,8 @@
 
 
         <div class="form-row">
-        <div class="col-sm-4 my-1 mt-3 mb-4">
-          <label>SUB-CATEGORY</label>
+        <div class="col-sm-7 my-1 mt-3 mb-4">
+          <label>FINAL-CATEGORY</label>
           <div class="input-group">
             <div class="input-group-prepend">
               <div class="input-group-text">
@@ -267,11 +267,13 @@
               </div>
             </div>
 
-            <select name="subCategoryId"  [(ngModel)]="selectedSubCategoryId" class="custom-select" id="inlineFormCustomSelectPref">
+            <select name="finalCategoryId"  [(ngModel)]="selectedFinalCategoryId" class="custom-select" id="inlineFormCustomSelectPref">
               <option selected disabled>Choose...</option>
-              <option *ngFor="let item of subCategoryList"
-                      [ngValue]="item.productSubCategoryId">
-                      {{item.productSubCategoryId}} = {{item.subCategoryName}}
+              <option *ngFor="let item of finalCategoryList"
+                      [ngValue]="item.productFinalCategoryId">
+                      {{item.productFinalCategoryId}} = {{item.finalCategoryName}} 
+                      [SUB=>]{{item.productSubCategoryForm.subCategoryName}}
+                      [ROOT=>]{{item.productSubCategoryForm.productRootCategoryForm.rootCategoryName}}
               </option>
             </select>
 
