--- a/src/app/pages/productComponent/update-product/update-product.component.html
+++ b/src/app/pages/productComponent/update-product/update-product.component.html
@@ -189,8 +189,8 @@
               </div>
             </div>
   
-         <div class="text-center">
-            <button type="submit" class="btn btn-primary btn-sm">Update Product</button>
+         <div class="text-center mt-3">
+            <button mat-raised-button color="accent">Update Product</button>
            </div>
     
          
