--- a/src/app/pages/productComponent/upload-files-product/upload-files-product.component.html
+++ b/src/app/pages/productComponent/upload-files-product/upload-files-product.component.html
@@ -5,14 +5,14 @@
 
         <table class="table table-hover" style="font-size: 10px;">
             <thead>
-              <tr class="text-primary">
-                <th scope="col">#</th>
-                <th scope="col">P-ID</th>
+              <tr class="text-primary text-center">
+                <th scope="col">ID</th>
+                <th scope="col">P_ID</th>
                 <th scope="col">PRODUCT</th>
-                <th scope="col">MANU-PRICE</th>
+                <th scope="col">MENU_PRICE</th>
                 <th scope="col">MRP</th>
                 <th scope="col">QUANTITY</th>
-                <th scope="col">SELL-P</th>
+                <th scope="col">SELL_P</th>
                 <th scope="col">DISCOUNT</th>
                 <th scope="col">MAIN-THUM</th>
                 <th scope="col">FILES</th>
