--- a/src/app/pages/subCategoryComponent/upload-files-sub-category/upload-files-sub-category.component.html
+++ b/src/app/pages/subCategoryComponent/upload-files-sub-category/upload-files-sub-category.component.html
@@ -12,6 +12,7 @@
               <th scope="col">status</th>
               <th scope="col">image-URL</th>
               <th scope="col">video-URL</th>
+              <th scope="col">FILE</th>
               <th scope="col">upload-image</th>
   
              
@@ -27,9 +28,15 @@
               <mat-slide-toggle  [(ngModel)]="data.subCategoryStatus">
               </mat-slide-toggle>
 
-    
-              <td>NULL OBJ</td>
-              <td>NULL OBJ</td>
+             
+
+              <td >{{data.imageUrl}}</td> 
+              <td>{{data.videoUrl}}</td>
+
+              <td *ngIf="data.imageUrl != null ">
+                <img src="{{data.imageUrl}}"  alt="File" height="50">
+              </td>
+
               <!-- <td *ngIf="data.imageUrl==''">NULL OBJ</td> -->
               
               <!-- <td *ngIf="!data.imageUrl==''">{{data.imageUrl}}</td> -->
