--- a/src/app/pages/finalCategoryComponent/show-final-category/show-final-category.component.html
+++ b/src/app/pages/finalCategoryComponent/show-final-category/show-final-category.component.html
@@ -4,7 +4,7 @@
       <table class="table table-sm table-hover table-striped">
           <thead>
             <tr>
-              <th scope="col">#TAG</th>
+              <th scope="col">#</th>
               <th scope="col">FILE</th>
               <th scope="col">FINAL-cat-Name</th>
               <th scope="col">desc</th>
