product changes and updating data and product sizes

--- a/src/app/pages/productComponent/add-product/add-product.component.html
+++ b/src/app/pages/productComponent/add-product/add-product.component.html
@@ -254,7 +254,131 @@
             </div>
           </div>
 
+          <div class="col-sm-2">
+            <div class="form-check">
+              <input class="form-check-input"
+                 [(ngModel)]="addProduct.size3XL" 
+                 name="size3XL" 
+                 type="checkbox" 
+                 value="" 
+                 id="flexCheckDefault">
+              <label class="form-check-label text-primary" for="flexCheckDefault">
+                   SIZE-3XL
+              </label>
+            </div>
           </div>
+
+          </div>
+
+
+          <hr>
+            <!-- FOR SHOES -->
+          <div class="form-row">
+
+            <div class="col-sm-2">
+              <div class="form-check">
+                <input class="form-check-input"
+                   [(ngModel)]="addProduct.uk4" 
+                   name="uk4" 
+                   type="checkbox" 
+                   value="" 
+                   id="flexCheckDefault">
+                <label class="form-check-label text-primary" for="flexCheckDefault">
+                  UK4
+                </label>
+              </div>
+            </div>
+  
+  
+            <div class="col-sm-2">
+              <div class="form-check">
+                <input class="form-check-input"
+                   [(ngModel)]="addProduct.uk5" 
+                   name="uk5" 
+                   type="checkbox" 
+                   value="" 
+                   id="flexCheckDefault">
+                <label class="form-check-label text-primary" for="flexCheckDefault">
+                  UK5
+                </label>
+              </div>
+            </div>
+  
+  
+            <div class="col-sm-2">
+              <div class="form-check">
+                <input class="form-check-input"
+                   [(ngModel)]="addProduct.uk6" 
+                   name="uk6" 
+                   type="checkbox" 
+                   value="" 
+                   id="flexCheckDefault">
+                <label class="form-check-label text-primary" for="flexCheckDefault">
+                  UK6
+                </label>
+              </div>
+            </div>
+  
+  
+            <div class="col-sm-2">
+              <div class="form-check">
+                <input class="form-check-input"
+                   [(ngModel)]="addProduct.uk7" 
+                   name="uk7" 
+                   type="checkbox" 
+                   value="" 
+                   id="flexCheckDefault">
+                <label class="form-check-label text-primary" for="flexCheckDefault">
+                  UK7
+                </label>
+              </div>
+            </div>
+  
+            <div class="col-sm-2">
+              <div class="form-check">
+                <input class="form-check-input"
+                   [(ngModel)]="addProduct.uk8" 
+                   name="uk8" 
+                   type="checkbox" 
+                   value="" 
+                   id="flexCheckDefault">
+                <label class="form-check-label text-primary" for="flexCheckDefault">
+                  UK8
+                </label>
+              </div>
+            </div>
+  
+            <div class="col-sm-2">
+              <div class="form-check">
+                <input class="form-check-input"
+                   [(ngModel)]="addProduct.uk9" 
+                   name="uk9" 
+                   type="checkbox" 
+                   value="" 
+                   id="flexCheckDefault">
+                <label class="form-check-label text-primary" for="flexCheckDefault">
+                  UK9
+                </label>
+              </div>
+            </div>
+  
+            <div class="col-sm-2">
+              <div class="form-check">
+                <input class="form-check-input"
+                   [(ngModel)]="addProduct.uk10" 
+                   name="uk10" 
+                   type="checkbox" 
+                   value="" 
+                   id="flexCheckDefault">
+                <label class="form-check-label text-primary" for="flexCheckDefault">
+                  UK10
+                </label>
+              </div>
+            </div>
+  
+            </div>
+             <!-- FOR SHOES ENDING-->
+  
 
 
         <div class="form-row">
@@ -284,7 +408,7 @@
 
 
        <div class="form-group">
-        <mat-slide-toggle name="isEnabled" [(ngModel)]="addProduct.isEnabled">
+        <mat-slide-toggle name="productStatus" [(ngModel)]="addProduct.productStatus">
         </mat-slide-toggle>
       </div>
 
