--- a/src/app/pages/productComponent/update-product/update-product.component.html
+++ b/src/app/pages/productComponent/update-product/update-product.component.html
@@ -127,7 +127,7 @@
            </div>
 
          <div class="form-group">
-          <mat-slide-toggle name="isEnabled" [(ngModel)]="productData.enabled">
+          <mat-slide-toggle name="productStatus" [(ngModel)]="productData.productStatus">
           </mat-slide-toggle>
         </div>
   
