--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -71,6 +71,19 @@
 
         <div class="col-sm-2">
 
+            <h5  class="text-primary font-weight-bold"  >BANNER-TYPE</h5>
+            <mat-card >
+                <a class="anchorUnderline" routerLink="createBannerType">
+                    <h5>Add Banner-Type</h5>
+                </a>
+            </mat-card>
+
+
+        </div>
+
+
+        <div class="col-sm-2">
+
             <h5  class="text-primary font-weight-bold"  >BANNER</h5>
             <mat-card >
                 <a class="anchorUnderline" routerLink="banner">
