--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -99,7 +99,15 @@
 
         </div>
 
-        <div class="col-sm-2"></div>
+        <div class="col-sm-2 mt-4">
+            <h5  class="text-primary font-weight-bold"  >STRU-FINAL-CATEGORY</h5>
+            <mat-card >
+                <a class="anchorUnderline" routerLink="saveStructureFinalCategory_Single">
+                    <h5>save SFC</h5>
+                </a>
+
+            </mat-card>
+        </div>
 
         <div class="col-sm-2"></div>
 
