order mane ADMIN PUBLIC

--- a/src/app/pages/dashboard/dashboard.component.css
+++ b/src/app/pages/dashboard/dashboard.component.css
@@ -2,3 +2,14 @@
 {
     text-decoration: none;
 }
+
+.orderMan
+{
+    color: #000080;
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+
+.orderCol_color
+{
+    color: #DE3163;
+}
