--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -109,10 +109,35 @@
             </mat-card>
         </div>
 
+        
+
         <div class="col-sm-2"></div>
 
     </div>
 
 </div>
 
+
+<div class="container text-center">
+    <hr>
+
+    <h5  class="font-weight-bold orderMan">Order Management</h5>
+
+    <div class="row">
+
+
+            <div class="col-sm-2 mt-4">
+                <h5  class="text-primary font-weight-bold"  >CURRENT-ORDER</h5>
+                <mat-card >
+                    <a class="anchorUnderline" routerLink="orderManagement">
+                        <h5 class="orderCol_color">ORDERS</h5>
+                    </a>
+    
+                </mat-card>
+            </div>
+
+    </div>
+
+
+</div>
 
