--- a/src/app/pages/order-Management/update-order-management/update-order-management.component.html
+++ b/src/app/pages/order-Management/update-order-management/update-order-management.component.html
@@ -3,7 +3,7 @@
    </div>
 
 
-<div class="container mb-5 pb-5">
+<div class="container mt-5 pb-5">
 
     <div style="max-width: 700px;">
 
@@ -118,10 +118,10 @@
                         </div>
 
                         <hr>
-                            <!-- DATE OF DELIVERED -->
-                     <div *ngIf="singleOrder.deliveryStatus == 'N' ">
+                            <!-- DATE OF DELIVERED  R==>Running-->
+                     <div *ngIf="singleOrder.deliveryStatus == 'N' ||  singleOrder.deliveryStatus == 'R' ">
 
-                        <div>
+                        <div  *ngIf="singleOrder.deliveryStatus == 'R' ">
                             <img src="../../../../assets/order-images/delivery-running-5.gif" width="auto" height="60" alt="">
                             <span class="text-primary"> Delivered Running...</span>
                         </div>
@@ -134,24 +134,11 @@
                             <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
                             <mat-datepicker #picker></mat-datepicker>
                           </mat-form-field>
-                           
-                          <br>
-                            <!-- DELIVERED STATUS -->
-                          <div  class="form-row">
-                           <div class="col-6 "> 
-                            <mat-label>Delivered</mat-label>
-                            <select class="custom-select" (change)="selectdeliveyType($event)">
-                                <option selected disabled value="N">Choose...</option>
-                                    <option  value="Y" >  YES  </option>
-                                <option  value="N" >  NO  </option>
-                              </select>
-                           </div>
-                          </div>
 
-                          <!-- DELIVERY COMP--INFO DATA -->
-                          <hr>
+                            <!-- DELIVERY COMP--INFO DATA -->
+                            <hr>
                             <h5>
-                                <span class="text-primary text-primary">DELIVERY ORDER DETAILS : </span>
+                                <span class="text-primary text-primary font-weight-bold">DELIVERY ORDER DETAILS : </span>
                             </h5>
                           <div class="form-row ">
                             
@@ -175,11 +162,27 @@
 
                             </div>
 
+                          <hr>
+                            <!-- DELIVERED STATUS -->
+                          <div  class="form-row">
+                           <div class="col-6 "> 
+                            <mat-label>Delivered</mat-label>
+                            <select class="custom-select" (change)="selectdeliveyType($event)">
+                                <option selected disabled value="N">Choose...</option>
+                                    <option  value="Y" >  YES  </option>
+                                <option  value="N" >  NO  </option>
+                              </select>
+                           </div>
+                          </div>
+
+                        
+
                             <div class="mt-3">
                                 <button mat-raised-button color="accent">UPDATE DELIVERY ORDER</button>
                                </div>
                         </div>
 
+                        <!-- PRODUCT IS DELIVERED SUCCESS  Y ==> SUCCESS -->
                         <div *ngIf="singleOrder.deliveryStatus == 'Y' ">
                             <div class="text-center">
                                     <img src="../../../../assets/order-images/success3.png" width="auto" height="100" alt="">
@@ -191,11 +194,6 @@
                                     </h4>
                             </div>
                         </div>
-                          
-               
-
-                 
-
 
               </form>   
 
