--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -70,6 +70,17 @@
         </div>
 
         <div class="col-sm-2">
+            <h5  class="text-primary font-weight-bold"  >ADD PRODUCT SIZE</h5>
+            <mat-card >
+                <a class="anchorUnderline" routerLink="createProductSize">
+                    <h5>Add Product SIZE</h5>
+                </a>
+            </mat-card>
+
+        </div>
+
+
+        <div class="col-sm-2">
 
             <h5  class="text-primary font-weight-bold"  >BANNER-TYPE</h5>
             <mat-card >
