--- a/src/app/pages/productComponent/add-product/add-product.component.html
+++ b/src/app/pages/productComponent/add-product/add-product.component.html
@@ -258,13 +258,13 @@
           <div class="col-sm-2">
             <div class="form-check">
               <input class="form-check-input"
-                 [(ngModel)]="addProduct.size3XL" 
-                 name="size3XL" 
+                 [(ngModel)]="addProduct.sizeXXXL" 
+                 name="sizeXXXL" 
                  type="checkbox" 
                  value="" 
                  id="flexCheckDefault">
               <label class="form-check-label text-primary" for="flexCheckDefault">
-                   SIZE-3XL
+                   SIZE-XXXL
               </label>
             </div>
           </div>
