--- a/src/app/pages/productComponent/add-product/add-product.component.html
+++ b/src/app/pages/productComponent/add-product/add-product.component.html
@@ -22,6 +22,28 @@
              </div>
         </div>
 
+        <div class="form-row">
+          <div class="form-group col-md-12">
+              <label>Product Default Name</label>
+                <input  type="text" 
+                        required="required"
+                        [(ngModel)]="addProduct.productDefaultName" name="productDefaultName"
+                        class="form-control"
+                        placeholder="Product Default Name">
+           </div>
+        </div>
+
+        <div class="form-row">
+          <div class="form-group col-md-4">
+              <label>Product Color</label>
+                <input  type="color" 
+                        required="required"
+                        [(ngModel)]="addProduct.color" name="color"
+                        class="form-control"
+                        placeholder="Color">
+           </div>
+        </div>
+
       
         <div class="form-row">
 
