--- a/src/app/pages/productComponent/update-product/update-product.component.html
+++ b/src/app/pages/productComponent/update-product/update-product.component.html
@@ -14,11 +14,32 @@
               <div class="form-group col-md-12">
                   <label>Product Name</label>
                   <input  type="text" 
-                         
                           [(ngModel)]="productData.productName" name="productName"
                           class="form-control"
                           placeholder="Product Name">
                </div>
+          </div>
+
+          <div class="form-row">
+            <div class="form-group col-md-12">
+                <label>Product Default Name</label>
+                  <input  type="text" 
+                          required="required"
+                          [(ngModel)]="productData.productDefaultName" name="productDefaultName"
+                          class="form-control"
+                          placeholder="Product Default Name">
+             </div>
+          </div>
+  
+          <div class="form-row">
+            <div class="form-group col-md-4">
+                <label>Product Color</label>
+                  <input  type="color" 
+                          required="required"
+                          [(ngModel)]="productData.color" name="color"
+                          class="form-control"
+                          placeholder="Color">
+             </div>
           </div>
   
         
